Disable spammy logging in InterfaceRegistry affecting too many people.

A recent change added error logging to InterfaceRegistry which has, at
some point since then, become suddenly spammy. This change sets the log
level to VLOG(1) since the cause of the problem is well-understood, but
the solution is not as of yet; and the spammy logging is affecting all
non-Chrome embedders (including tests running on bots, or locally by
devs).

Change that added the error logging:
https://codereview.chromium.org/2457493004

BUG=664595
R=rockot@chromium.org

Review-Url: https://codereview.chromium.org/2504803002
Cr-Commit-Position: refs/heads/master@{#432344}

Former-commit-id: face478e9879692bae410d450acceaddf6106532